# mpsc-channel

./: .gitignore  CMakeLists.txt  LICENSE  README.md  library.cpp
include/: ConcurrentQueue.h  Handles.h  MPSCQueue.h
src/: ConcurrentQueue.cpp  Handles.cpp  MPSCQueue.cpp
